# robot-rtab

./: .gitignore  README.md  launch_test.sh
scripts/: camera_check_rtab.py
setup/: full.md  hailo8l.md  setup-rtab_realsense.md  ydlidar-x3-yb1.md
src/: install_my_robot.sh
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: rtabmap_params.yaml
src/my_robot_bringup/launch/: bringup_sensors.launch.py  launch_test.sh  nav2_bringup.launch.py  requirments.txt  rtabmap_mapping.launch.py
